unpackaged/main/default/objects/Lead/fields/Owner_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Start_Date__c</fullName>
    <formula>Owner:User.StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Start Date</label>
    <type>Date</type>
</CustomField>