unpackaged/main/default/objects/Lead/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Marketo Email Preference Center</inlineHelpText>
    <label>Pain</label>
    <type>Checkbox</type>
</CustomField>