unpackaged/main/default/objects/Lead/fields/Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_ID__c</fullName>
    <formula>AbleTo_Participant_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formerly AbilTo ID</inlineHelpText>
    <label>Participant ID</label>
    <type>Text</type>
</CustomField>