unpackaged/main/default/objects/Lead/fields/Participant_Referrals_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_Referrals_ID__c</fullName>
    <description>THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Referrals ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>