unpackaged/main/default/objects/Lead/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weill Cornell Medical</fullName>
            </value>
            <value>
                <fullName>Quitnet</fullName>
            </value>
            <value>
                <fullName>Unum</fullName>
            </value>
            <value>
                <fullName>Equity Healthcare</fullName>
            </value>
            <value>
                <fullName>Innovation Health</fullName>
            </value>
            <value>
                <fullName>Osler</fullName>
            </value>
            <value>
                <fullName>Princeton Medical Group</fullName>
            </value>
            <value>
                <fullName>Advocare</fullName>
            </value>
            <value>
                <fullName>VNAHG - HHS (Home Health Services)</fullName>
            </value>
            <value>
                <fullName>VNAHG - CPC+ (Medicare CPC+ Program)</fullName>
            </value>
            <value>
                <fullName>Family Medicine Center</fullName>
            </value>
            <value>
                <fullName>Shore Physicians Group</fullName>
            </value>
            <value>
                <fullName>Banner Health</fullName>
            </value>
            <value>
                <fullName>Beacon Health</fullName>
            </value>
            <value>
                <fullName>Quartet</fullName>
            </value>
            <value>
                <fullName>South Shore Collaborative Psychiatry</fullName>
            </value>
            <value>
                <fullName>HouseCalls</fullName>
            </value>
            <value>
                <fullName>Diabetes Support Program</fullName>
            </value>
            <value>
                <fullName>Physician Group</fullName>
                <isActive>false</isActive>
                <label>Physician Group</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>