unpackaged/main/default/objects/Lead/fields/Partner_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Partner_Indicator__c</fullName>
    <formula>IF(ISPICKVAL( Partner__c , "Innovation Health"), IMAGE("/servlet/servlet.FileDownload?file=01536000002MRCf", "Innovation Health",30,125),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Indicator</label>
    <type>Text</type>
</CustomField>