unpackaged/main/default/objects/Lead/fields/Peer_Specialist_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Peer_Specialist_Interaction_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date that the peer specialist spoke with the participant</inlineHelpText>
    <label>Peer Specialist Interaction Date</label>
    <type>DateTime</type>
</CustomField>