unpackaged/main/default/objects/Lead/fields/Peer_Specialist_Notes__c.field-meta.xml
<CustomField>
    <fullName>Peer_Specialist_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This area is for entering notes</inlineHelpText>
    <label>Peer Specialist Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>