unpackaged/main/default/objects/Lead/fields/Peer_Specialist_Status__c.field-meta.xml
<CustomField>
    <fullName>Peer_Specialist_Status__c</fullName>
    <inlineHelpText>for cataloging what the status of Peer Specialist engagement is</inlineHelpText>
    <label>Peer Specialist Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>PassbacktoEngagement Specialist Schedule IC</fullName>
                <label>Pass back to Engagement Specialist Schedule IC</label>
            </value>
            <value>
                <fullName>Participant Unreachable</fullName>
            </value>
            <value>
                <fullName>Pass back to Engagement Specialist "Close Lead Out"</fullName>
            </value>
            <value>
                <fullName>Calls Exhausted - Email Sent</fullName>
            </value>
            <value>
                <fullName>Calls Exhausted</fullName>
            </value>
            <value>
                <fullName>Send to Service Center Financial Hardship</fullName>
            </value>
            <value>
                <fullName>Send to Service Center General</fullName>
            </value>
            <value>
                <fullName>Send to service center - Treatment Reschedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>