unpackaged/main/default/objects/Lead/fields/Peer_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Peer_to_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer to Call</label>
    <type>Checkbox</type>
</CustomField>