unpackaged/main/default/objects/Lead/fields/Pending_IC_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Pending_IC_Scheduling__c</fullName>
    <label>Pending IC Scheduling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callback Set</fullName>
            </value>
            <value>
                <fullName>Ticket Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>