unpackaged/main/default/objects/Lead/fields/Pending_IC_Scheduling_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Pending_IC_Scheduling_Time_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>date time stamp for when the value of this field is changed</inlineHelpText>
    <label>Pending IC Scheduling Time Stamp</label>
    <type>DateTime</type>
</CustomField>