unpackaged/main/default/objects/Lead/fields/Phone_Append__c.field-meta.xml
<CustomField>
    <fullName>Phone_Append__c</fullName>
    <label>Phone Append</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phone_Append</valueSetName>
    </valueSet>
</CustomField>