unpackaged/main/default/objects/Lead/fields/PhoneLookup__c.field-meta.xml
<CustomField>
    <fullName>PhoneLookup__c</fullName>
    <description>Is the phone number valid?</description>
    <inlineHelpText>Is the phone number valid?</inlineHelpText>
    <label>Phone Lookup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhoneLookup</valueSetName>
    </valueSet>
</CustomField>