unpackaged/main/default/objects/Lead/fields/PhoneTwo__c.field-meta.xml
<CustomField>
    <fullName>PhoneTwo__c</fullName>
    <description>Is there a secondary number that can be used? If so, Input here.

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Is there a secondary number that can be used? If so, Input here.</inlineHelpText>
    <label>Phone Two</label>
    <type>Phone</type>
</CustomField>