unpackaged/main/default/objects/Lead/fields/PhoneTwoType__c.field-meta.xml
<CustomField>
    <fullName>PhoneTwoType__c</fullName>
    <description>What type of telephone is this number?

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>What type of telephone is this number?</inlineHelpText>
    <label>Phone Two Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhoneType</valueSetName>
    </valueSet>
</CustomField>