unpackaged/main/default/objects/Lead/fields/PhoneType__c.field-meta.xml
<CustomField>
    <fullName>PhoneType__c</fullName>
    <description>What type of telephone is this number?

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>Type of Phone (i.e. mobile, home, work)</inlineHelpText>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhoneType</valueSetName>
    </valueSet>
</CustomField>