unpackaged/main/default/objects/Lead/fields/Plan_Sponsor_Parent__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor_Parent__c</fullName>
    <label>Plan Sponsor Parent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_Plan_Sponsor_Parent</valueSetName>
    </valueSet>
</CustomField>