unpackaged/main/default/objects/Lead/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <description>Indicates if a lead is from a group plan or individual plan This field should only be used for Aetna MA at this time.</description>
    <inlineHelpText>Indicates if a lead is from a group plan or individual plan This field should only be used for Aetna MA at this time.</inlineHelpText>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plan_Type</valueSetName>
    </valueSet>
</CustomField>