unpackaged/main/default/objects/Lead/fields/PlanSponsorID__c.field-meta.xml
<CustomField>
    <fullName>PlanSponsorID__c</fullName>
    <description>What is the ID value for this Plan Sponsor?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the ID value for this Plan Sponsor?</inlineHelpText>
    <label>Plan Sponsor ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>