unpackaged/main/default/objects/Lead/fields/PlanSponsorParent__c.field-meta.xml
<CustomField>
    <fullName>PlanSponsorParent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Sponsor Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>