unpackaged/main/default/objects/Lead/fields/Preferred_Call_Time_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Call_Time_SFDC__c</fullName>
    <label>Preferred Call Time (SFDC)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Midday</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>