unpackaged/main/default/objects/Lead/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <description>Preferred Contact Method from formstack forms</description>
    <inlineHelpText>Preferred Contact Method from formstack forms</inlineHelpText>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Contact_Method</valueSetName>
    </valueSet>
</CustomField>