unpackaged/main/default/objects/Lead/fields/Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Marketo Email Preference Center</inlineHelpText>
    <label>Pregnancy</label>
    <type>Checkbox</type>
</CustomField>