unpackaged/main/default/objects/Lead/fields/Preview_Confirmation_Reqd__c.field-meta.xml
<CustomField>
    <fullName>Preview_Confirmation_Reqd__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dialer related - informs whether lead is called in preview or predictive mode</inlineHelpText>
    <label>Preview Confirmation Reqd</label>
    <type>Checkbox</type>
</CustomField>