unpackaged/main/default/objects/Lead/fields/PrimarySubscriber__c.field-meta.xml
<CustomField>
    <fullName>PrimarySubscriber__c</fullName>
    <description>Is this customer the primary benefit holder?

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>Is this customer the primary benefit holder?</inlineHelpText>
    <label>Primary Subscriber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoValue</valueSetName>
    </valueSet>
</CustomField>