unpackaged/main/default/objects/Lead/fields/PrimarySubscriberFirstName__c.field-meta.xml
<CustomField>
    <fullName>PrimarySubscriberFirstName__c</fullName>
    <description>Primary Subscriber's first name

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Primary Subscriber's first name</inlineHelpText>
    <label>Primary Subscriber First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>