unpackaged/main/default/objects/Lead/fields/PrimarySubscriberLastName__c.field-meta.xml
<CustomField>
    <fullName>PrimarySubscriberLastName__c</fullName>
    <description>What is the Primary Subscriber's last name?

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>What is the Primary Subscriber's last name?</inlineHelpText>
    <label>Primary Subscriber Last Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>