unpackaged/main/default/objects/Lead/fields/PrimarySubscriberRelation__c.field-meta.xml
<CustomField>
    <fullName>PrimarySubscriberRelation__c</fullName>
    <description>Relationship to the Benefit Holder

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>Relationship to the Benefit Holder</inlineHelpText>
    <label>Primary Subscriber Relation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PrimarySubscriber__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SubscriberRelation</valueSetName>
    </valueSet>
</CustomField>