unpackaged/main/default/objects/Lead/fields/PriorTreatmentDetails__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatmentDetails__c</fullName>
    <description>Treatment Notes/Details from previous AbilTo Program</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Treatment Notes/Details from previous AbilTo Program</inlineHelpText>
    <label>Prior Treatment Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>