unpackaged/main/default/objects/Lead/fields/PSE_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>PSE_Eligibility__c</fullName>
    <formula>AND( 

ISPICKVAL( ClientName__c , "Aetna"), 

ISPICKVAL( Source__c,"Data"), 

HDHP_Indicator__c = "Fully Covered", 

Soft_Opt_Out__c = False, 

DATEVALUE( Last_Referral_Date__c ) &gt;= DATE(2019,4,1), 

ISPICKVAL(PrimarySubscriber__c,"Yes")

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSE Eligibility</label>
    <type>Checkbox</type>
</CustomField>