unpackaged/main/default/objects/Lead/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>Ranking from 1-100 based on likelihood of conversion.
1 = Least Likely
100 = Most Likely</description>
    <inlineHelpText>Ranking from 1-100 based on likelihood of conversion.
1 = Least Likely
100 = Most Likely</inlineHelpText>
    <label>Ranking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>