unpackaged/main/default/objects/Lead/fields/ReasonFUADeclined__c.field-meta.xml
<CustomField>
    <fullName>ReasonFUADeclined__c</fullName>
    <description>Provide a reason why the previous AbilTo Participant has declined re-enrolling into an FUA/Booster Program.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Provide a reason why the previous AbilTo Participant has declined re-enrolling into an FUA/Booster Program.</inlineHelpText>
    <label>Reason FUA Declined</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>