unpackaged/main/default/objects/Lead/fields/ReceivedMailing__c.field-meta.xml
<CustomField>
    <fullName>ReceivedMailing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer received the pre-mailer</inlineHelpText>
    <label>Received Mailing</label>
    <type>Checkbox</type>
</CustomField>