unpackaged/main/default/objects/Lead/fields/reengage_opt_in_dialer_issue__c.field-meta.xml
<CustomField>
    <fullName>reengage_opt_in_dialer_issue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>this field is intended for reporting on the leads that had to be updated on 6/1/17 with dialer status Ready due to the workflow rule that was based on 91 days and switching the dialer status to ableto removed</inlineHelpText>
    <label>reengage opt in dialer issue</label>
    <type>Checkbox</type>
</CustomField>