unpackaged/main/default/objects/Lead/fields/Referral_Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Internal_Status__c</fullName>
    <label>Referral Internal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>