unpackaged/main/default/objects/Lead/fields/ReferralDate__c.field-meta.xml
<CustomField>
    <fullName>ReferralDate__c</fullName>
    <description>Date that the referral was received from AbilTo Client

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that the referral was received from AbilTo Client</inlineHelpText>
    <label>Referral Date</label>
    <type>Date</type>
</CustomField>