unpackaged/main/default/objects/Lead/fields/ReferralNotes__c.field-meta.xml
<CustomField>
    <fullName>ReferralNotes__c</fullName>
    <description>Notes from the Referrer to AbilTo

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Notes from the Referrer to AbilTo</inlineHelpText>
    <label>Referral Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>