unpackaged/main/default/objects/Lead/fields/Referrer_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Client_Name__c</fullName>
    <description>The Employer for this referrer.</description>
    <formula>ReferrerName__r.Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Employer for this referrer.</inlineHelpText>
    <label>Referrer Client Name</label>
    <type>Text</type>
</CustomField>