unpackaged/main/default/objects/Lead/fields/ReferrerEnAbleToID__c.field-meta.xml
<CustomField>
    <fullName>ReferrerEnAbleToID__c</fullName>
    <description>THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <formula>ReferrerName__r.ReferrerID__c</formula>
    <inlineHelpText>Auto-populates EnAbilTo Referrer ID from Contact Record</inlineHelpText>
    <label>Referrer EnAbleTo ID</label>
    <type>Text</type>
</CustomField>