unpackaged/main/default/objects/Lead/fields/ReferrerName__c.field-meta.xml
<CustomField>
    <fullName>ReferrerName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship between Standard Contact and Standard Lead Objects.</description>
    <inlineHelpText>Relationship between Standard Contact and Standard Lead Objects.</inlineHelpText>
    <label>Referrer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>