unpackaged/main/default/objects/Lead/fields/Rev_It_Up_Opens__c.field-meta.xml
<CustomField>
    <fullName>Rev_It_Up_Opens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rev It Up Opens</label>
    <type>Checkbox</type>
</CustomField>