unpackaged/main/default/objects/Lead/fields/Saturday_Dials__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Dials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Dials</label>
    <type>Checkbox</type>
</CustomField>