unpackaged/main/default/objects/Lead/fields/Schedule_Channel__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Channel__c</fullName>
    <description>displays which channel the IC came in from</description>
    <inlineHelpText>displays which channel the IC came in from</inlineHelpText>
    <label>Schedule Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EC</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>FAQ Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>