unpackaged/main/default/objects/Lead/fields/Scheduled_Session_Start_Part_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Session_Start_Part_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Scheduled Session Starting for the participant. Not is scheduled date.</inlineHelpText>
    <label>Scheduled Session Start (Part) Date</label>
    <type>Date</type>
</CustomField>