unpackaged/main/default/objects/Lead/fields/Screener_Results_Link__c.field-meta.xml
<CustomField>
    <fullName>Screener_Results_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>From the screener form</inlineHelpText>
    <label>Screener Results Link</label>
    <type>Url</type>
</CustomField>