unpackaged/main/default/objects/Lead/fields/SelfReferralfromMailer__c.field-meta.xml
<CustomField>
    <fullName>SelfReferralfromMailer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer self referred after receiving mailer.</inlineHelpText>
    <label>Self Referral from Mailer</label>
    <type>Checkbox</type>
</CustomField>