unpackaged/main/default/objects/Lead/fields/SelfReferralNotes__c.field-meta.xml
<CustomField>
    <fullName>SelfReferralNotes__c</fullName>
    <description>Notes for the Self Referral</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Notes for the Self Referral</inlineHelpText>
    <label>Self Referral Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>