unpackaged/main/default/objects/Lead/fields/SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SFDC ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>