unpackaged/main/default/objects/Lead/fields/Soft_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Soft_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Soft Opt Out</label>
    <type>Checkbox</type>
</CustomField>