unpackaged/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source of the Information

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>Source of the Information</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source</valueSetName>
    </valueSet>
</CustomField>