unpackaged/main/default/objects/Lead/fields/Speak_w_a_Peer_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Speak_w_a_Peer_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the individual is not sure about the program and you offer for a peer specialist to contact them and they have said yes then check this box</inlineHelpText>
    <label>Speak w/ a Peer Specialist</label>
    <type>Checkbox</type>
</CustomField>