unpackaged/main/default/objects/Lead/fields/Speak_w_a_Peer_Specialist_date_recorded__c.field-meta.xml
<CustomField>
    <fullName>Speak_w_a_Peer_Specialist_date_recorded__c</fullName>
    <formula>IF(   Speak_w_a_Peer_Specialist__c   = TRUE, NOW(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speak w/ a Peer Specialist date recorded</label>
    <type>DateTime</type>
</CustomField>