unpackaged/main/default/objects/Lead/fields/State_Consent__c.field-meta.xml
<CustomField>
    <fullName>State_Consent__c</fullName>
    <description>Indicate if this lead is from a state which requires additional consent</description>
    <formula>IF(State="NE",IMAGE('/sfc/servlet.shepherd/version/download/0681R00000KmuhM', 'Consent Required',60,100),

IF(State="DE",IMAGE('/sfc/servlet.shepherd/version/download/0681R00000KmuhM', 'Consent Required', 60,100),

IF(State="CO",IMAGE('/sfc/servlet.shepherd/version/download/0681R00000KmuhM', 'Consent Required', 60,100),

IF(State="OK",IMAGE('/sfc/servlet.shepherd/version/download/0681R00000KmuhM', 'Consent Required', 60,100),

IMAGE("/sfc/servlet.shepherd/version/download/0681R00000Kmuhl",'Consent Not Required', 60,100)
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicate if this lead is from a state which requires additional consent</inlineHelpText>
    <label>State Consent</label>
    <type>Text</type>
</CustomField>