unpackaged/main/default/objects/Lead/fields/StatusChangeDate__c.field-meta.xml
<CustomField>
    <fullName>StatusChangeDate__c</fullName>
    <description>Date that the status was changed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that the status was changed</inlineHelpText>
    <label>Status Change Date</label>
    <type>DateTime</type>
</CustomField>