unpackaged/main/default/objects/Lead/fields/Stress_Anxiety_and_Depression__c.field-meta.xml
<CustomField>
    <fullName>Stress_Anxiety_and_Depression__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Marketo Email Preference Center</inlineHelpText>
    <label>Stress Anxiety and Depression</label>
    <type>Checkbox</type>
</CustomField>