unpackaged/main/default/objects/Lead/fields/Team_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Team_Supervisor__c</fullName>
    <formula>Owner:User.Manager.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Supervisor</label>
    <type>Text</type>
</CustomField>