unpackaged/main/default/objects/Lead/fields/Test_Client_Image__c.field-meta.xml
<CustomField>
    <fullName>Test_Client_Image__c</fullName>
    <formula>IF( ISPICKVAL(ClientName__c,"Horizon"), IMAGE("https://chart.googleapis.com/chart?chst=d_text_outline&amp;chld=d84a4a|16|h|ffffff|b|" 
+ "Horizon","ERROR"),
           IF( ISPICKVAL(ClientName__c,"Aetna"), IMAGE("https://chart.googleapis.com/chart?chst=d_text_outline&amp;chld=171b99|16|h|ffffff|b|" 
+ "Aetna","ERROR"),NULL ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Client Image</label>
    <type>Text</type>
</CustomField>