unpackaged/main/default/objects/Lead/fields/TestDateTime__c.field-meta.xml
<CustomField>
    <fullName>TestDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TestDateTime</label>
    <type>DateTime</type>
</CustomField>