unpackaged/main/default/objects/Lead/fields/Text_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Text_Campaign__c</fullName>
    <inlineHelpText>field indicates if a individual is going through a text campaign</inlineHelpText>
    <label>Text Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mpulse</fullName>
            </value>
            <value>
                <fullName>twilio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>