unpackaged/main/default/objects/Lead/fields/Text_Message_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Text_Message_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>in order to unsubscribe from text messages</inlineHelpText>
    <label>Text Message Opt Out</label>
    <type>Checkbox</type>
</CustomField>