unpackaged/main/default/objects/Lead/fields/Therapist_Only_Option__c.field-meta.xml
<CustomField>
    <fullName>Therapist_Only_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the individual only want to speak with a Therapist and not both a Therapist and a Coach</inlineHelpText>
    <label>Therapist Only Option</label>
    <type>Checkbox</type>
</CustomField>