unpackaged/main/default/objects/Lead/fields/TPUSA__c.field-meta.xml
<CustomField>
    <fullName>TPUSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPUSA</label>
    <type>Checkbox</type>
</CustomField>