unpackaged/main/default/objects/Lead/fields/Treatment_Status__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Status__c</fullName>
    <label>Treatment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>IC Scheduled</fullName>
            </value>
            <value>
                <fullName>In Treatment</fullName>
            </value>
            <value>
                <fullName>Pending Treatment Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>